<?xml version="1.0" encoding="utf-8"?>
<!-- Copyright (C) 2016, SharkAndroid

    Licensed under the Apache License, Version 2.0 (the "License");
    you may not use this file except in compliance with the License.
    You may obtain a copy of the License at

        http://www.apache.org/licenses/LICENSE-2.0

    Unless required by applicable law or agreed to in writing, software
    distributed under the License is distributed on an "AS IS" BASIS,
    WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
    See the License for the specific language governing permissions and
    limitations under the License.
-->
<resources>
    <!-- App -->
    <string name="app_name" translatable="false">Ainol Toolkit</string>
    <string name="app_copyright" translatable="false">Copyright © 2016, SharkAndroid</string>
    <string name="app_version" translatable="false">v7.0</string>
    <!-- Progress bar -->
    <string name="settings">SETTING</string>
    <!-- Name of functions -->
    <string name="cpu_boost">Unlocking CPU freq</string>
    <string name="gpu_boost">Unlocking GPU freq</string>
    <string name="freezes">Fix freezes</string>
    <string name="colorfix">Fix the color gamut</string>
    <string name="crimg_title">Backup recovery</string>
    <string name="recins_title">Install recovery</string>
    <string name="modules_title">About modules</string>
    <string name="as_title">About system</string>
    <string name="cpu_freq_text">CPU freq:</string>
    <string name="gpu_freq_text">GPU freq:</string>
    <string name="ms_text">Memory speed:</string>
    <string name="cpu_freq_value">Value</string>
    <string name="gpu_freq_value">Value</string>
    <string name="ms_value">Value</string>
    <!-- Buttons -->
    <string name="on">ON</string>
    <string name="off">OFF</string>
    <string name="ok" translatable="false">OK</string>
    <string name="exit">Exit</string>
    <!-- Menu -->
    <string name="update_app">Update app</string>
    <string name="source_code">Source code</string>
    <string name="advices">Advices</string>
    <string name="changelog_title">Changelog</string>
    <string name="about_title">About program</string>
    <!-- Texts -->
    <string name="unsupport_device">This program only for Ainol devices that have Actions ATM7029 processor.</string>
    <string name="no_root">This application requires root permisions.</string>
    <string name="camera_module">Camera module:</string>
    <string name="touch_module">Touch module:</string>
    <string name="gsensor_module">GSensor module:</string>
    <string name="unknown_module">Unknown</string>
    <string name="cpuboost_unlocked">CPU freq unlocked.</string>
    <string name="cpuboost_locked">CPU freq locked.</string>
    <string name="gpuboost_unlocked">GPU freq unlocked.</string>
    <string name="gpuboost_locked">GPU freq locked.</string>
    <string name="function_enabled">Function enabled.</string>
    <string name="function_disabled">Function disabled.</string>
    <string name="wd_title">Warning!</string>
    <string name="wd_text">Functions Fix freezes and color gamut dont require inclusion on all devices.\nTheir inclusion can cause data loss,bricking devices.</string>
    <string name="need_device">This function is only for Hero 2(v2,v1),Venus and Captain devices.</string>
    <string name="need_fw">To use this function you need to use the latest firmware(Ainol SDK1224) or another fw based on SDK1224!</string>
    <string name="crimg_install">Backup recovery partition successfully made in</string>
    <string name="rec_install">Recovery successfully installed.</string>
    <string name="rec_uninstall">Unable to install recovery.</string>
    <string name="rec_copy">Copy rec.img into AT_Dir and start installation.</string>
    <string name="error">An unexpected error occurred.</string>
    <string name="product_model">Model:</string>
    <string name="android_version">Android version:</string>
    <string name="build_date">Build date:</string>
    <string name="platform">Platform:</string>
    <string name="cpu">CPU:</string>
    <string name="gpu">GPU:</string>
    <string name="ram">RAM:</string>
    <string name="hdmi">HDMI:</string>
    <string name="hm1">Auto on/off</string>
    <string name="hm2">Always on</string>
    <string name="advices_text">
        <b>After switching on/off function Fix freezes required:\n
        1. Reboot tablet into recovery mode(Only TWRP or CWM).\n
        2. Install freezes_fix_xxx.zip/freezes_unfix_xxx.zip and reboot your tablet.\n\n
        To install recovery you need:\n
        1. Copy rec.img(FS fat16) in which is installed Stock,TWRP,CWM recovery, to AT_Dir.\n
        2. Press Recovery installer button and after 30 sec he will be installed.\n</b>
    </string>
    <string name="about_text">
        <b><i>Ainol Toolkit\n
        Mobile tool for Ainol devices that have Actions ATM7029 processor.\n\n\n
        Author: iBullRay.\n
        Version: 7.0.\n
        Copyright © 2016, SharkAndroid.\n\n</i></b>
    </string>
    <string name="changelog_text">
        <b>Version 7.0</b>\n\n
        * Partition About gsensor replaced with About modules.\n
        It contains data of camera,touch and gsensor modules.\n
        * Searching of modules is going independently from the device model.\n
        * Fixed problems with UI.\n
        * Optimized application code.\n
        * Updated translation for EN and RU localization.\n\n
        <b>Version 6.1</b>\n\n
        * Added Recovery backup function.\n
        * Added HDMI mode index in About system.\n
        * Warning dialog appears at the first start up.\n
        * Fixed bug with Unknown gsdriver on stock firmwares.\n
        * Updated hardware checking system.\n
        * Optimized application code.\n
        * Updated translation for EN and RU localization.\n\n
        <b>Version 6.0</b>\n\n
        * Added Recovery installer.\n
        * Fixed bug with Color gamut.\n
        * Optimized application code.\n
        * Updated translation for EN and RU localization.\n\n
        <b>Version 5.2</b>\n\n
        * Added Memory speed index.\n
        * New UI style.\n
        * Updated translation for EN and RU localization.\n\n
        <b>Version 5.1</b>\n\n
        * Fixed bug with showing GPU freq.\n
        * Fixed bug when after rebooting the tablet he restores CPU and GPU freq.\n
        * Added firmware checking on startup Freezes fix function.\n
        * After switching on/off function Fix freezes appear window with info how to install.\n
        * Added index of RAM in About system.\n
        * Updated translation for EN and RU localization.\n\n
        <b>Version 5.0</b>\n\n
        * Added index of CPU and GPU freq.\n
        * Added Advices in menu.\n
        * Fixed bug with Unlocking GPU Freq.\n
        * Updated translation for EN and RU localization.\n\n
        <b>Version 4.0</b>\n\n
        * Added Fix the color gamut function and changed Fix freezes function.\nThe new function fixes the problems with color gamut after flashing firmware.\n
        * Improved method of displaying information in About program menu.\n
        * Added GSensor driver info in About GSensor function.\n
        * Updated translation for EN and RU localization.\n\n
        <b>Version 3.0</b>\n\n
        * Added About system info and About program info.\n
        * Fixed bug with showing Model on firmware AOKP and AOSPA in About system.\n
        * Optimized application code.\n\n
        <b>Version 2.0</b>\n\n
        * Optimized function About GSensor.\n
        * Added Platform,CPU and GPU strings in About device menu.\n
        * Fixed bug with Model in About device menu.\n
        * Updated translation for EN and RU localization.\n\n
        <b>Version 1.9-open_beta_test</b>\n\n
        * Removed GSensor Calibration.\n
        * Added About device menu.\n
        * Added warning text for Fix freezes function.\n
        * Updated translation for EN and RU localization.\n\n
        <b>Version 1.8-open_beta_test</b>\n\n
        * Some fixes for Gravity Sensor Calibration.\n
        * Some fixes in code and in translation.\n\n
        <b>Version 1.7-open_beta_test</b>\n\n
        * Updated CPU and GPU unlocking frequency System.\n 
        * New function, Fix Freezes.\nThis function fix freezes at Ainol Captain(Rhino) on SharkAndroid firmware.\n
        * Fixed Saving System.\n
        * Some fixes.\n\n
        <b>Version 1.6-closed_beta_test</b>\n\n
        * Updated CPU and GPU unlocking frequency System.\n
        * Some fixes.\n\n
        <b>Version 1.5-closed_beta_test</b>\n\n
        * Added Gravity Sensor Calibration.\n
        * Update UI style.\n\n
        <b>Version 1.4-test</b>\n\n
        * New UI style.\n
        * Updated hardware checking system.\n
        * Fixed bugs.\n\n
        <b>Version 1.3-test</b>\n\n
        * Updated Changelog list system.\n
        * Updated Unlocking CPU and GPU freq system.\n\n
        <b>Version 1.2-test</b>\n\n
        * Added Update App system.\n
        * New main icon.\n\n
        <b>Version 1.1-test</b>\n\n
        * Added source code url.\n
        * Added hardware checking.\n
        * First build.\n\n
    </string>
</resources>