<!-- Copyright (C) 2014 SharkAndroid

    Licensed under the Apache License, Version 2.0 (the "License");
    you may not use this file except in compliance with the License.
    You may obtain a copy of the License at

        http://www.apache.org/licenses/LICENSE-2.0

    Unless required by applicable law or agreed to in writing, software
    distributed under the License is distributed on an "AS IS" BASIS,
    WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
    See the License for the specific language governing permissions and
    limitations under the License.
-->

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="#c0c0c0">

    <TextView
        android:id="@+id/app_version"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/app_copyright"
        android:layout_alignRight="@+id/app_copyright"
        android:layout_marginRight="35dp"
        android:text="@string/app_version"
        android:textColor="#4b0082" />

    <ToggleButton
        android:id="@+id/gpuboost_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/gpuboost"
        android:layout_alignRight="@+id/gpuboost"
        android:layout_below="@+id/gpuboost"
        android:textColor="#4b0082"
        android:textOff="@string/off"
        android:textOn="@string/on" />

    <TextView
        android:id="@+id/cpuboost"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/settings"
        android:layout_marginLeft="45dp"
        android:layout_marginTop="35dp"
        android:text="@string/cpu_boost"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textColor="#4b0082" />

    <ToggleButton
        android:id="@+id/cpuboost_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/cpuboost"
        android:layout_alignRight="@+id/cpuboost"
        android:layout_below="@+id/cpuboost"
        android:textColor="#4b0082"
        android:textOff="@string/off"
        android:textOn="@string/on" />

    <TextView
        android:id="@+id/gpuboost"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/cpuboost_btn"
        android:layout_below="@+id/cpuboost_btn"
        android:layout_marginTop="18dp"
        android:text="@string/gpu_boost"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textColor="#4b0082" />

    <ProgressBar
        android:id="@+id/progressBar1"
        style="?android:attr/progressBarStyleHorizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignRight="@+id/app_copyright"
        android:layout_below="@+id/settings" />

    <TextView
        android:id="@+id/app_copyright"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:text="@string/app_copyright"
        android:textColor="#4b0082" />

    <TextView
        android:id="@+id/settings"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:text="@string/settings"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textColor="#4b0082" />

    <Button
        android:id="@+id/calib_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/gpuboost"
        android:layout_alignRight="@+id/settings"
        android:layout_marginRight="22dp"
        android:text="@string/sensor_calib_title"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textColor="#4b0082" />

    <ToggleButton
        android:id="@+id/freezes_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/freezes"
        android:layout_alignRight="@+id/gpuboost_btn"
        android:layout_below="@+id/freezes"
        android:textColor="#4b0082"
        android:visibility="visible"
        android:textOff="@string/off"
        android:textOn="@string/on" />

    <TextView
        android:id="@+id/freezes"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/gpuboost_btn"
        android:layout_below="@+id/gpuboost_btn"
        android:layout_marginTop="22dp"
        android:text="@string/freezes"
        android:visibility="visible"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textColor="#4b0082" />
    
</RelativeLayout>
